--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,15 @@ button{
    cursor: pointer;
 
  }
+ #resposta {
+   margin-top: 30px;
+
+   transition: opacity 1s;
+ }
+
+ #resposta div {
+  font-size: 16px;
+  font-weight: normal;
+  opacity: 0.9;
+  margin-bottom: 10px;
+}
